Clarify dotnet licenses data
Also improve formatting

Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/src/licensedcode/data/licenses/ms-net-library-2018-11.yml
+++ b/src/licensedcode/data/licenses/ms-net-library-2018-11.yml
@@ -9,3 +9,7 @@ ignorable_urls:
     - http://go.microsoft.com/?linkid=9840733
     - http://www.microsoft.com/exporting
     - https://go.microsoft.com/fwlink/?LinkID=824704
+notes: this is the version that existed at http://www.microsoft.com/net/dotnet_library_license.htm
+ from November 2018 and then at https://dotnet.microsoft.com/dotnet_library_license.htm
+ It also existed as this URL in NuGet http://go.microsoft.com/fwlink/?LinkId=329770
+ 
