--- a/src/licensedcode/data/licenses/ms-net-library-2019-06.yml
+++ b/src/licensedcode/data/licenses/ms-net-library-2019-06.yml
@@ -9,3 +9,6 @@ ignorable_urls:
     - http://www.microsoft.com/exporting
     - https://docs.microsoft.com/en-us/legal/gdpr
     - https://go.microsoft.com/fwlink/?LinkID=824704
+notes: this is the version that existed at https://dotnet.microsoft.com/dotnet_library_license.htm
+ from June 2019 and then at https://dotnet.microsoft.com/en/dotnet_library_license.htm
+ It also existed as this URL in NuGet http://go.microsoft.com/fwlink/?LinkId=329770
