--- a/src/licensedcode/data/licenses/ms-net-library-2020-09.yml
+++ b/src/licensedcode/data/licenses/ms-net-library-2020-09.yml
@@ -9,4 +9,6 @@ other_urls:
 spdx_license_key: LicenseRef-scancode-ms-net-library-2020-09
 ignorable_urls:
     - http://www.microsoft.com/exporting
-
+notes: this is the version that existed at https://dotnet.microsoft.com/en/dotnet_library_license.htm
+ from September 2020 and then at https://dotnet.microsoft.com/en-us/dotnet_library_license.htm
+  It also existed as this URL in NuGet http://go.microsoft.com/fwlink/?LinkId=329770
