--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -182,7 +182,7 @@ jobs:
           python_architecture: x64
           test_suites:
               click_versions: |
-                for clk_ver in 8.0.4 8.0.3 8.0.2 8.0.1 7.1.2 7.1.1 7.1 6.7; 
+                for clk_ver in 8.1.3 8.1.2 8.1.1 8.1.0 8.0.4 8.0.3 8.0.2 8.0.1 7.1.2 7.1.1 7.1 6.7; 
                  do
                   venv/bin/pip install click==$clk_ver;
                   venv/bin/scancode -i samples/ -n3 --json foo.json; 
