--- a/setup-mini.cfg
+++ b/setup-mini.cfg
@@ -68,7 +68,7 @@ install_requires =
     chardet >= 3.0.0
     click >= 6.7, !=7.0
     colorama >= 0.3.9
-    commoncode==31.0.0b4
+    commoncode==31.0.0
     container-inspector >= 31.0.0
     debian-inspector >= 31.0.0b1
     dparse2 >= 0.6.1
