Use correct requirement specs
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/setup-mini.cfg
+++ b/setup-mini.cfg
@@ -68,9 +68,9 @@ install_requires =
     chardet >= 3.0.0
     click >= 6.7, !=7.0
     colorama >= 0.3.9
-    commoncode==31.0.0
+    commoncode >= 31.0.0
     container-inspector >= 31.0.0
-    debian-inspector >= 31.0.0b1
+    debian-inspector >= 31.0.0
     dparse2 >= 0.6.1
     fasteners
     fingerprints >= 0.6.0
@@ -95,7 +95,7 @@ install_requires =
     pkginfo2 >= 30.0.0
     pip-requirements-parser >= 31.2.0
     pluggy >= 1.0.0
-    plugincode==31.0.0b1
+    plugincode >= 31.0.0
     publicsuffix2
     pyahocorasick >= 2.0.0b1
     pygmars >= 0.7.0
