Always store texts in license and rules #3067
This way we do not have paths stored at all.
This requires a fairly significant code change.
- License/Rule data_file and text_file are now methods.
- License/Rule stored_text is gone and text is a field
  and not a property
- loading and dumping requires a location.

Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/tests/licensedcode/data/models/licenses/gpl-2.0-library.yml
+++ b/tests/licensedcode/data/models/licenses/gpl-2.0-library.yml
@@ -2,6 +2,7 @@ key: gpl-2.0-library
 short_name: GPL 2.0 with Library exception
 name: GNU General Public License 2.0 with Library exception
 category: Copyleft Limited
+spdx_license_key: LicenseRef-scancode-gpl-2.0-library
 owner: Grammatica
 other_urls:
     - http://grammatica.percederberg.net/index.html
