--- a/tests/licensedcode/data/models/licenses/bsd-ack-carrot2.yml
+++ b/tests/licensedcode/data/models/licenses/bsd-ack-carrot2.yml
@@ -3,5 +3,6 @@ short_name: BSD Acknowledgment (Carrot2) License
 name: BSD Acknowledgment (Carrot2) License
 category: Permissive
 owner: Carrot2
+spdx_license_key: LicenseRef-scancode-bsd-ack-carrot2
 homepage_url: http://www.carrot2.org/carrot2.LICENSE
 minimum_coverage: 80
