--- a/tests/licensedcode/data/example_external_licenses/licenses_to_install1/setup.cfg
+++ b/tests/licensedcode/data/example_external_licenses/licenses_to_install1/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 license_files =
-    gpl-1.0.LICENSE
+   test.LICENSE
 
 [aliases]
 release = clean --all bdist_wheel --plat-name manylinux1_x86_64 --python-tag py3
