--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -79,6 +79,10 @@ jobs:
                 venv/bin/pytest -n 3 -vvs --test-suite=all \
                   tests/licensedcode/test_zzzz_cache.py
 
+              installed_licenses: |
+                venv/bin/pytest -vvs --test-suite=all \
+                  tests/licensedcode/test_installed_license_detection.py
+
     - template: etc/ci/azure-posix.yml
       parameters:
           job_name: ubuntu18_cpython
@@ -169,23 +173,6 @@ jobs:
           test_suites:
               all: venv\Scripts\pytest -n 2 -vvs tests\scancode\test_cli.py
 
-    - template: etc/ci/azure-posix-installed-external-license.yml
-      parameters:
-          job_name: installed_external_license_ubuntu
-          image_name: ubuntu-20.04
-          python_versions: ['3.8']
-
-    - template: etc/ci/azure-win-installed-external-license.yml
-      parameters:
-          job_name: installed_external_license_windows
-          image_name: windows-2022
-          python_versions: ['3.8']
-
-    - template: etc/ci/azure-posix-installed-external-license.yml
-      parameters:
-          job_name: installed_external_license_macos11
-          image_name: macos-11
-          python_versions: ['3.8']
 
 ################################################################################
 # Test using many version of Click to work around any regressions in their API
