--- a/setup-mini.cfg
+++ b/setup-mini.cfg
@@ -86,6 +86,7 @@ install_requires =
     license_expression >= 30.0.0
     lxml >= 4.9.1
     MarkupSafe >= 1.0
+    oelint_parser >= 2.6.0
     packageurl_python >= 0.9.0
     packaging >= 21.0.0
     # use temp advanced patched release
