--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libtirpc-common/copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libtirpc-common/copyright-detailed.expected.yml
@@ -58,7 +58,7 @@ other_license_expression_spdx: BSD-3-Clause AND (GPL-2.0-only AND GPL-2.0-only) 
   AND BSD-3-Clause AND BSD-3-Clause
 license_detections: []
 other_license_detections:
-  - license_expression:
+  - license_expression: other-permissive AND free-unknown
     detection_rules: []
     matches:
       - score: '20.0'
