--- a/setup.cfg
+++ b/setup.cfg
@@ -75,7 +75,7 @@ install_requires =
     fasteners
     fingerprints >= 0.6.0
     ftfy >=  6.0.0
-    gemfileparser >= 0.7.0
+    gemfileparser2 >= 0.9.0
     html5lib
     importlib_metadata
     intbitset >= 3.0.0
