--- a/.github/workflows/scancode-release.yml
+++ b/.github/workflows/scancode-release.yml
@@ -235,7 +235,7 @@ jobs:
       matrix:
         os: [ubuntu-22.04, macos-12]
         pyver: ["3.9", "3.10"]
-        # os: [ubuntu-18.04, ubuntu-20.04, ubuntu-22.04, macos-10.15, macos-11, macos-12]
+        # os: [ubuntu-20.04, ubuntu-22.04, macos-11, macos-12]
         # pyver: ["3.7", "3.8", "3.9", "3.10"]
 
     steps:
@@ -324,7 +324,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-18.04, ubuntu-20.04, ubuntu-22.04]
+        os: [ubuntu-20.04, ubuntu-22.04]
         pyver: [3.8]
 
     steps:
@@ -362,7 +362,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [macos-10.15, macos-11, macos-12]
+        os: [macos-11, macos-12]
         pyver: [3.8]
 
     steps:
