Improve existing license metadata
Contributed-by: Dennis Clark <dmclark@nexb.com>
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/src/licensedcode/data/licenses/gstreamer-exception-2005.yml
+++ b/src/licensedcode/data/licenses/gstreamer-exception-2005.yml
@@ -2,7 +2,7 @@ key: gstreamer-exception-2005
 short_name: GStreamer Exception (2005)
 name: GStreamer Exception (2005)
 category: Permissive
-owner: Unspecified
+owner: GStreamer Project
 is_exception: yes
 spdx_license_key: GStreamer-exception-2005
 other_urls:
