--- a/src/licensedcode/data/licenses/gstreamer-exception-2008.yml
+++ b/src/licensedcode/data/licenses/gstreamer-exception-2008.yml
@@ -2,7 +2,7 @@ key: gstreamer-exception-2008
 short_name: GStreamer Exception (2008)
 name: GStreamer Exception (2008)
 category: Permissive
-owner: Unspecified
+owner: GStreamer Project
 is_exception: yes
 spdx_license_key: GStreamer-exception-2008
 other_urls:
