--- a/src/licensedcode/data/licenses/ms-net-library-2016-05.yml
+++ b/src/licensedcode/data/licenses/ms-net-library-2016-05.yml
@@ -7,6 +7,9 @@ homepage_url: http://www.microsoft.com/web/webpi/eula/net_library_eula_enu.htm
 notes: this is the version that existed at http://www.microsoft.com/net/dotnet_library_license.htm
     from May 2016. It also existed as this URL in NuGet http://go.microsoft.com/fwlink/?LinkId=329770
 spdx_license_key: LicenseRef-scancode-ms-net-library-2016-05
+other_urls:
+    - http://go.microsoft.com/fwlink/?LinkId=329770
+    - http://www.microsoft.com/net/dotnet_library_license.htm
 ignorable_urls:
-    - http://www.microsoft.com/exporting
     - http://go.microsoft.com/fwlink/?LinkId=528096
+    - http://www.microsoft.com/exporting
