--- a/.github/workflows/about-files-ci.yml
+++ b/.github/workflows/about-files-ci.yml
@@ -2,6 +2,9 @@ name: CI About Files
 
 on: [push, pull_request]
 
+permissions:
+  contents: read # to fetch code (actions/checkout)
+
 jobs:
   build:
     runs-on: ubuntu-20.04
