--- a/src/licensedcode/data/licenses/smsc-non-commercial-2012.yml
+++ b/src/licensedcode/data/licenses/smsc-non-commercial-2012.yml
@@ -4,3 +4,7 @@ name: SMSC Non-Commercial 2012
 category: Proprietary Free
 owner: Microchip
 spdx_license_key: LicenseRef-scancode-smsc-non-commercial-2012
+ignorable_copyrights:
+    - Copyright 2012 SMSC
+ignorable_holders:
+    - SMSC
