Update false positives and unknown intro heuristics
* Update false positive detection heuristics
* Update unknown intro detection heuristics
* Update test expectations
* Add ffmpeg License.md as a test for complex licenses #3113

Signed-off-by: Ayan Sinha Mahapatra <ayansmahapatra@gmail.com>

--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/c/clamav/stable_copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/c/clamav/stable_copyright-detailed.expected.yml
@@ -2242,7 +2242,8 @@ other_license_detections:
             spdx_license_key: LGPL-2.0-or-later
             spdx_url: https://spdx.org/licenses/LGPL-2.0-or-later
   - license_expression: x11-xconsortium AND public-domain
-    detection_rules: []
+    detection_rules:
+      - not-combined
     matches:
       - score: '20.2'
         start_line: 293
