--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libp11-kit0/copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libp11-kit0/copyright-detailed.expected.yml
@@ -216,8 +216,7 @@ other_license_detections:
             spdx_license_key: LicenseRef-scancode-ibm-dhcp
             spdx_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/licenses/ibm-dhcp.LICENSE
   - license_expression: free-unknown
-    detection_rules:
-      - not-combined
+    detection_rules: []
     matches:
       - score: '76.15'
         start_line: 160
