--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/e/epiphany-browser/stable_copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/e/epiphany-browser/stable_copyright-detailed.expected.yml
@@ -19,11 +19,11 @@ declared_license:
   - CC0-1.0
   - CC-BY-SA-3.0
   - CC-BY-SA-4.0
-license_expression: (gpl-3.0-plus AND gpl-3.0-plus) AND (cc0-1.0 AND cc0-1.0 AND cc0-1.0 AND
-  cc0-1.0 AND cc0-1.0) AND (gpl-2.0-plus AND gpl-2.0-plus) AND (gpl-3.0-plus AND gpl-3.0-plus)
-  AND cc-by-sa-3.0 AND (lgpl-2.0-plus AND lgpl-2.0-plus) AND (lgpl-2.0-plus AND lgpl-2.0-plus)
-  AND (lgpl-2.0-plus AND lgpl-2.0-plus) AND (lgpl-2.0-plus AND lgpl-2.0-plus) AND (apache-2.0
-  AND apache-2.0) AND (gpl-3.0-plus AND gpl-3.0-plus) AND (cc-by-sa-4.0 AND cc-by-sa-4.0)
+license_expression: (gpl-3.0-plus AND gpl-3.0-plus) AND (cc0-1.0 AND cc0-1.0) AND (gpl-2.0-plus
+  AND gpl-2.0-plus) AND (gpl-3.0-plus AND gpl-3.0-plus) AND cc-by-sa-3.0 AND (lgpl-2.0-plus
+  AND lgpl-2.0-plus) AND (lgpl-2.0-plus AND lgpl-2.0-plus) AND (lgpl-2.0-plus AND lgpl-2.0-plus)
+  AND (lgpl-2.0-plus AND lgpl-2.0-plus) AND (apache-2.0 AND apache-2.0) AND (gpl-3.0-plus AND
+  gpl-3.0-plus) AND (cc-by-sa-4.0 AND cc-by-sa-4.0)
 copyright: |
   2009-2018 Igalia S.L
   2002 Jorn Baayen
@@ -272,70 +272,42 @@ matches:
     is_license_tag: yes
     is_license_intro: no
     matched_text: 'License: cc0-1.0'
-  - score: '50.0'
-    start_line: 171
-    end_line: 171
-    matcher: 2-aho
-    rule_length: 1
-    matched_length: 1
-    match_coverage: '100.0'
-    rule_relevance: 50
-    identifier: cc0-1.0_176.RULE
-    license_expression: cc0-1.0
-    is_license_text: no
-    is_license_notice: no
-    is_license_reference: yes
-    is_license_tag: no
-    is_license_intro: no
-    matched_text: CC0
-  - score: '50.0'
-    start_line: 173
-    end_line: 173
-    matcher: 2-aho
-    rule_length: 1
-    matched_length: 1
-    match_coverage: '100.0'
-    rule_relevance: 50
-    identifier: cc0-1.0_176.RULE
-    license_expression: cc0-1.0
-    is_license_text: no
-    is_license_notice: no
-    is_license_reference: yes
-    is_license_tag: no
-    is_license_intro: no
-    matched_text: CC0
-  - score: '50.0'
-    start_line: 175
-    end_line: 175
-    matcher: 2-aho
-    rule_length: 1
-    matched_length: 1
-    match_coverage: '100.0'
-    rule_relevance: 50
-    identifier: cc0-1.0_176.RULE
-    license_expression: cc0-1.0
-    is_license_text: no
-    is_license_notice: no
-    is_license_reference: yes
-    is_license_tag: no
-    is_license_intro: no
-    matched_text: CC0
   - score: '100.0'
-    start_line: 178
+    start_line: 158
     end_line: 179
-    matcher: 2-aho
-    rule_length: 22
-    matched_length: 22
+    matcher: 1-hash
+    rule_length: 213
+    matched_length: 213
     match_coverage: '100.0'
     rule_relevance: 100
-    identifier: cc0-1.0_162.RULE
+    identifier: cc0-1.0_186.RULE
     license_expression: cc0-1.0
     is_license_text: no
-    is_license_notice: no
-    is_license_reference: yes
+    is_license_notice: yes
+    is_license_reference: no
     is_license_tag: no
     is_license_intro: no
     matched_text: |
+      Certain owners wish to permanently relinquish those rights to a Work for
+      the purpose of contributing to a commons of creative, cultural and
+      scientific works ("Commons") that the public can reliably and without
+      fear of later claims of infringement build upon, modify, incorporate in
+      other works, reuse and redistribute as freely as possible in any form
+      whatsoever and for any purposes, including without limitation commercial
+      purposes. These owners may contribute to the Commons to promote the
+      ideal of a free culture and the further production of creative, cultural
+      and scientific works, or to gain reputation or greater distribution for
+      their Work in part through the use and efforts of others.
+
+      For these and/or other purposes and motivations, and without any
+      expectation of additional consideration or compensation, the person
+      associating CC0 with a Work (the "Affirmer"), to the extent that he or
+      she is an owner of Copyright and Related Rights in the Work, voluntarily
+      elects to apply CC0 to the Work and publicly distribute the Work under
+      its terms, with knowledge of his or her Copyright and Related Rights in
+      the Work and the meaning and intended legal effect of CC0 on those
+      rights.
+       .
       The complete text of the Creative Commons 0 1.0 Universal
       can be found in `/usr/share/common-licenses/CC0-1.0'.
   - score: '97.8'
