Fix test failures with ignorable authors
Signed-off-by: Ayan Sinha Mahapatra <ayansmahapatra@gmail.com>

--- a/src/licensedcode/data/licenses/nortel-dasa.yml
+++ b/src/licensedcode/data/licenses/nortel-dasa.yml
@@ -6,3 +6,6 @@ owner: Unspecified
 spdx_license_key: LicenseRef-scancode-nortel-dasa
 ignorable_emails:
     - frank@comsys.dofn.de
+ignorable_authors:
+    - F.Schnekenbuehl <frank@comsys.dofn.de>
+
