--- a/src/licensedcode/data/rules/nortel-dasa_1.yml
+++ b/src/licensedcode/data/rules/nortel-dasa_1.yml
@@ -3,3 +3,6 @@ is_license_text: yes
 relevance: 100
 ignorable_emails:
     - frank@comsys.dofn.de
+ignorable_authors:
+    - F.Schnekenbuehl <frank@comsys.dofn.de>
+
