Move reindex licenses to a seperate script
Delete the reindex licenses options from scancode
CLI and add a new script which does the reindexing,
also with additional directories optinally.

Signed-off-by: Ayan Sinha Mahapatra <ayansmahapatra@gmail.com>

--- a/setup-mini.cfg
+++ b/setup-mini.cfg
@@ -146,6 +146,7 @@ packages =
 [options.entry_points]
 console_scripts =
     scancode = scancode.cli:scancode
+    scancode-reindex-licenses = licensedcode.reindex:reindex_licenses
 
 # These are configurations for ScanCode plugins as setuptools entry points.
 # Each plugin entry hast this form:
